[gd_scene load_steps=4 format=3 uid="uid://cvg34wikii27f"]

[ext_resource type="Script" path="res://src/UI/Dialog Settings/Scripts/Faction Availability.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bokoikotidj57" path="res://src/UI/Dialog Settings/ChooseFaction.tscn" id="2"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="FactionAvailability" type="Control"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 50.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 35.0
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChooseFaction" parent="Panel/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SELECT_FACTION"

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="IsIsnotbutton" type="OptionButton" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 3
fit_to_longest_item = false
popup/item_0/text = "AV_ALWAYS"
popup/item_0/id = 0
popup/item_1/text = "AV_IS"
popup/item_1/id = 1
popup/item_2/text = "AV_IS_NOT"
popup/item_2/id = 2

[node name="VSeparator2" type="VSeparator" parent="Panel/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="StanceButton" type="OptionButton" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 3
fit_to_longest_item = false
popup/item_0/text = "FACTION_FRIENDLY"
popup/item_0/id = 0
popup/item_1/text = "FACTION_NEUTRAL"
popup/item_1/id = 1
popup/item_2/text = "FACTION_UNFRIENDLY"
popup/item_2/id = 2

[node name="VSeparator3" type="VSeparator" parent="Panel/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="Panel/HBoxContainer"]
layout_mode = 2
max_value = 10000.0
prefix = "ID"

[connection signal="faction_chosen" from="Panel/HBoxContainer/ChooseFaction" to="." method="set_id"]
[connection signal="item_selected" from="Panel/HBoxContainer/IsIsnotbutton" to="." method="_on_IsIsnotbutton_item_selected"]
[connection signal="item_selected" from="Panel/HBoxContainer/StanceButton" to="." method="_on_StanceButton_item_selected"]
[connection signal="value_changed" from="Panel/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
